Create the form with inputs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+    <form method="post">
+      <label for="fullname">Full name</label>
+      <input type= "text" id = "fullname" placeholder ="Enter Name" required  >
+      <label for="email">Email</label>
+      <input  type="email" id="email" placeholder="Enter Email" required >
+      <label for="phone">Telephone</label>
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
+      <label for="message">Message</label>
+      <textarea id="message" placeholder="Enter Message"></textarea>
+      <label>Make a choice</label>
+      <input type="checkbox" name="box1" value="First Choice">
+      <input type="checkbox" name="box2" value="Second choice">
+      <input type="checkbox" name="box3" value="Third choice">
+      <input type="submit">
+
+      
+
+    </form>
 
 
       <!-- Add a label for 'fullname'-->
